--- a/package.json
+++ b/package.json
@@ -8,5 +8,11 @@
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "autoprefixer": "^10.4.14",
+        "daisyui": "^2.51.5",
+        "postcss": "^8.4.21",
+        "tailwindcss": "^3.3.1"
     }
 }
