--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/cashier": "^14.12",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "laraveldaily/laravel-invoices": "^3.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
