--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,16 @@
 version: '3'
 
 services:
+  laravel:
+    build: .
+    container_name: laravel
+    ports:
+      - 8000:8000
+    depends_on:
+      - mysql
+    networks:
+      - cook_master
+
   caddy:
     image: caddy:latest
     container_name: caddy
@@ -9,16 +19,22 @@ services:
       - 443:443
     volumes:
       - ./Caddyfile:/etc/caddy/Caddyfile
+    depends_on:
+      - mysql
     networks:
       - cook_master
 
-  laravel:
-    build: .
-    container_name: laravel
+  mysql:
+    image: mysql:latest
+    container_name: mysql
     ports:
-      - 8000:8000
-    depends_on:
-      - caddy
+      - 3306:3306
+    restart: always
+    environment:
+      MYSQL_DATABASE: laravel
+      MYSQL_USER: user
+      MYSQL_PASSWORD: user
+      MYSQL_ROOT_PASSWORD: root
     networks:
       - cook_master
 
