--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "autoprefixer": "^10.4.14",
         "daisyui": "^2.51.5",
+        "fullcalendar": "^6.1.8",
         "postcss": "^8.4.21",
         "tailwindcss": "^3.3.1"
     }
