--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "dependencies": {
         "autoprefixer": "^10.4.14",
         "daisyui": "^2.51.5",
+        "express": "^4.18.2",
+        "express-handlebars": "^7.0.7",
         "fullcalendar": "^6.1.8",
+        "laravel-echo": "^1.15.1",
         "postcss": "^8.4.21",
+        "socket.io": "^4.7.1",
         "tailwindcss": "^3.3.1"
     }
 }
