--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "laraveldaily/laravel-invoices": "^3.1"
+        "laraveldaily/laravel-invoices": "^3.1",
+        "munafio/chatify": "^1.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
